# mkys-tdms-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/analyzer/constants/: mkys_columns.py  tdms_columns.py
src/analyzer/exceptions/: parser_exceptions.py
src/analyzer/models/: movement.py  movement_type.py
src/analyzer/parsers/: mkys_csv.py  tdms_xls.py
src/analyzer/reconciliation/: __init__.py  consumption_matcher.py  difference.py  engine.py  grouping.py  matchers.py  opening_matcher.py  result.py
src/analyzer/reports/: excel_report_builder.py  report_builder.py  styles.py  worksheet_writer.py
src/analyzer/utils/: __init__.py  date_parser.py  number_parser.py  string_parser.py
tests/: test_consumption_matcher.py  test_mkys_parser.py  test_opening_matcher.py  test_reconciliation_engine.py  test_report_builder.py  test_tdms_parser.py
